--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="flex justify-center">
                 {{ form_widget(registrationForm.submit) }}
             </div>
             <p class="text-sm font-light text-gray-500 dark:text-gray-400">
