--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -7,7 +7,7 @@
 
   //Form Submit
   &-input {
-    @apply bg-gray-50 border border-gray-300 sm:text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400;
+    @apply bg-gray-100 border border-gray-300 sm:text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 appearance-none bg-opacity-50;
 
     &:focus {
       @apply ring-primary-600 border-primary-600 dark:ring-blue-500 dark:border-blue-500;
@@ -16,7 +16,7 @@
 
   //Form Submit
   &-submit {
-    @apply w-full text-white transition duration-300 bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600;
+    @apply inline-block text-white transition duration-300 bg-primary-600 font-medium rounded-lg text-lg px-8 py-2.5 text-center dark:bg-primary-600;
 
     &:focus {
       @apply ring-4 outline-none ring-primary-300 dark:ring-primary-800;
@@ -28,10 +28,17 @@
   }
 
   &-label {
-    @apply block mb-2 text-sm font-medium block mb-2 text-sm font-medium;
+    @apply block font-medium mb-2 text-lg;
   }
 
   &-checkbox {
     @apply w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-4 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800;
   }
+}
+
+/* Masquer les flèches pour les inputs de type number */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
