--- a/assets/styles/components/_wrapper.scss
+++ b/assets/styles/components/_wrapper.scss
@@ -1,6 +1,6 @@
 .wrapper {
   &-style {
-    @apply p-4 md:p-6 border border-gray-300 dark:bg-opacity-60 bg-opacity-20 backdrop-blur-xl drop-shadow-lg bg-white rounded-lg shadow dark:bg-gray-800 dark:border-gray-700;
+    @apply p-4 lg:p-6 border border-gray-300 dark:bg-opacity-60 bg-opacity-20 backdrop-blur-xl drop-shadow-lg bg-white rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 overflow-hidden;
   }
   &-size {
     @apply w-full md:mt-0 sm:max-w-md;
