--- a/templates/base_form.html.twig
+++ b/templates/base_form.html.twig
@@ -28,7 +28,7 @@
         }
     </script>
 </head>
-<body class="bg-cover bg-center bg-fixed py-16 flex">
+<body class="bg-cover bg-center bg-fixed py-16 lg:py-0 flex">
     {% include('includes/darkmode.html.twig') %}
     <section class="flex flex-col items-center justify-center py-8 mx-auto md:h-screen">
         {% block body %}
