--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="wrapper-style">
+    <div class="wrapper-style wrapper">
 
     </div>
 {% endblock body %}
