--- a/templates/includes/logo.html.twig
+++ b/templates/includes/logo.html.twig
@@ -1,4 +1,4 @@
-<a href="{{ path('app_home') }}" class="flex justify-center items-center my-6 text-2xl font-semibold text-gray-900 dark:text-white">
-    <img class="h-8 mr-2" src="{{ asset("uploads/diagramme-circulaire.png") }}" alt="logo">
-    Monifus
+<a href="{{ path('app_home') }}" class="nav-item">
+    <img class="w-6" src="{{ asset("uploads/logo.svg") }}" alt="logo">
+    <span class="hidden ml-6 group-hover:block text-xl font-bold">Monifus</span>
 </a>
