--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -1,5 +1,5 @@
-<nav class="p-6 bg-gray-50 wrapper-style sticky top-6 z-50">
-    <div class="container flex flex-wrap justify-between items-center mx-auto">
+<nav class="p-4 bg-gray-50 wrapper wrapper-style sticky top-6 z-50">
+    <div class="flex flex-wrap justify-between items-center w-full">
         <div>
             <p class="text-xs">Path / <span class="font-bold text-gray-700 dark:text-gray-200">Accueil</span></p>
             <p class="font-extrabold text-lg text-gray-700 dark:text-gray-200">Bonjour {{ app.user.pseudonymeWebsite }}</p>
