--- a/templates/monitor/new.html.twig
+++ b/templates/monitor/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Créer un moniteur</h1>
 
-    <section class="wrapper-style grid gap-4 lg:gap-6">
+    <section class="wrapper wrapper-style grid gap-4 lg:gap-6">
 
         {{ include('monitor/_form.html.twig') }}
 
