--- a/templates/monitor/index.html.twig
+++ b/templates/monitor/index.html.twig
@@ -13,7 +13,7 @@
         {% if resources is not empty %}
             <div class="grid gap-4 lg:gap-6 lg:grid-cols-2 xl:grid-cols-3" id="resourcesContainer">
                 {% for resource in resources %}
-                    <div id="resource-container-{{ resource.id }}" class="resource wrapper-style gap-4" data-resource-id="{{ resource.id }}">
+                    <div id="resource-container-{{ resource.id }}" class="resource wrapper wrapper-style gap-4" data-resource-id="{{ resource.id }}">
                         <!-- Ajouter d'autres détails si nécessaire -->
                         <button type="button" class="loadMonitorsBtn flex justify-between w-full items-center" data-resource-id="{{ resource.id }}">
                             <span class="uppercase font-bold text-xl">{{ resource.name }}</span>
