--- a/templates/monitor/show.html.twig
+++ b/templates/monitor/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 wrapper-style">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 wrapper wrapper-style">
             <thead class="text-xs text-gray-700 uppercase dark:text-gray-400">
             <tr>
                 <th scope="col" class="px-4 md:px-6 py-3 align-middle">
@@ -23,7 +23,7 @@
             </thead>
             <tbody>
                 {% for monitor in monitors %}
-                    <tr class="" data-monitor-id="{{ monitor.id }}" id="monitor-{{ monitor.id }}">
+                    <tr class="hover:bg-opacity-50" data-monitor-id="{{ monitor.id }}" id="monitor-{{ monitor.id }}">
                         <td class="border-b border-gray-300 dark:border-gray-700 px-4 md:px-6 py-4 text-lg" data-type="pricePer1">{{ monitor.pricePer1 }}</td>
                         <td class="border-b border-gray-300 dark:border-gray-700 px-4 md:px-6 py-4 text-lg" data-type="pricePer10">{{ monitor.pricePer10 }}</td>
                         <td class="border-b border-gray-300 dark:border-gray-700 px-4 md:px-6 py-4 text-lg" data-type="pricePer100">{{ monitor.pricePer100 }}</td>
