--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <div class="wrapper-style wrapper-size">
+    <div class="wrapper-style wrapper wrapper-size">
         {% include("includes/logo.html.twig") %}
         <div class="space-y-4 md:space-y-6">
             <h1>Inscrivez-vous sur le site</h1>
