--- a/templates/resource/index.html.twig
+++ b/templates/resource/index.html.twig
@@ -11,7 +11,7 @@
 
     <section class="grid gap-4 lg:gap-6 lg:grid-cols-2 xl:grid-cols-3">
         {% for data in averages %}
-            <a href="{{ path('app_resource_show', {'id': data.resourceId}) }}" class="wrapper-style text-center grid gap-4 lg:gap-6">
+            <a href="{{ path('app_resource_show', {'id': data.resourceId}) }}" class="wrapper wrapper-style text-center grid gap-4 lg:gap-6">
                 <h3 class="text-2xl font-bold">{{ data.resourceName }}</h3>
                 <img class="w-16 h-16 m-auto" src="{{ data.resourceImg }}" alt="Image ressource dofus">
 
