:sparkles: Edit + delete sales

--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -28,7 +28,7 @@
   }
 
   &-label {
-    @apply block font-medium mb-2 text-lg;
+    @apply block font-medium mb-2 text-lg family;
   }
 
   &-checkbox {
