--- a/templates/includes/logo.html.twig
+++ b/templates/includes/logo.html.twig
@@ -1,4 +1,4 @@
 <a href="{{ path('app_home') }}" class="nav-item">
     <img class="w-6" src="{{ asset("uploads/logo.svg") }}" alt="logo">
-    <span class="hidden ml-6 group-hover:block text-xl font-bold">Monifus</span>
+    <span class="hidden ml-6 group-hover:block text-xl font-bold family">Monifus</span>
 </a>
