--- a/assets/styles/components/_wrapper.scss
+++ b/assets/styles/components/_wrapper.scss
@@ -5,7 +5,7 @@
     @apply border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 bg-opacity-20 dark:bg-opacity-60 backdrop-blur-xl;
   }
   &-size {
-    @apply w-full md:mt-0 sm:max-w-md;
+    @apply md:mt-0 w-96;
   }
 
   &-green {
@@ -32,4 +32,12 @@
     @apply border-yellow-300 bg-yellow-400 dark:bg-yellow-800 dark:border-yellow-700 bg-opacity-70 dark:bg-opacity-60 backdrop-blur-xl;
   }
 
+  &-p-0 {
+    @apply p-0;
+  }
+
+}
+
+a.wrapper {
+  @apply hover:border-primary transition duration-500;
 }
