--- a/templates/monitor/index.html.twig
+++ b/templates/monitor/index.html.twig
@@ -11,15 +11,13 @@
 
     <section class="grid gap-4 lg:gap-6">
         {% if resources is not empty %}
-            <div class="grid gap-4 lg:gap-6 lg:grid-cols-2 xl:grid-cols-3" id="resourcesContainer">
+            <div class="grid gap-4 lg:grid-cols-2 xl:grid-cols-3" id="resourcesContainer">
                 {% for resource in resources %}
-                    <div id="resource-container-{{ resource.id }}" class="resource wrapper wrapper-style gap-4" data-resource-id="{{ resource.id }}">
-                        <!-- Ajouter d'autres détails si nécessaire -->
-                        <button type="button" class="loadMonitorsBtn flex justify-between w-full items-center" data-resource-id="{{ resource.id }}">
-                            <span class="uppercase font-bold text-xl">{{ resource.name }}</span>
-                            <img class="w-10 h-10" src="{{ resource.imgUrl }}" alt="Icone ressource">
-                        </button>
-                    </div>
+                    <!-- Ajouter d'autres détails si nécessaire -->
+                    <button type="button" class="loadMonitorsBtn flex justify-between w-full items-center resource wrapper wrapper-style p-4" data-resource-id="{{ resource.id }}">
+                        <h2 class="uppercase font-bold text-xl">{{ resource.name }}</h2>
+                        <img class="w-10 h-10" src="{{ resource.imgUrl }}" alt="Icone ressource">
+                    </button>
                 {% endfor %}
             </div>
             <div id="monitorsContainer">
