--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,9 +8,9 @@
     {% endfor %}
 
     <div class="wrapper-style wrapper wrapper-size">
-        {% include("includes/logo.html.twig") %}
-        <div class="space-y-4 md:space-y-6">
-            <h1>Inscrivez-vous sur le site</h1>
+        <img class="mx-auto w-16" src="{{ asset('uploads/logo.svg') }}" alt="Logo Monifus">
+        <div class="space-y-4 md:space-y-6 mt-4">
+            <h1 class="text-center">Inscription</h1>
             {{ form_start(registrationForm, {'attr': {'class': 'form-wrapper'}}) }}
             <div>
                 {{ form_label(registrationForm.email, 'Votre email') }}
@@ -36,8 +36,7 @@
                     </div>
                     <div class="ml-3 text-sm">
                         {{ form_label(registrationForm.agreeTerms) }}
-                        <label for="remember" class="text-gray-500 dark:text-gray-300">J'accepte les conditions
-                            générales d'utilisation</label>
+                        <label for="remember" class="text-gray-500 dark:text-gray-300">J'accepte les conditions générales d'utilisation</label>
                     </div>
                 </div>
             </div>
